fixed nav bar, changed resource page

--- a/CurrentE.html
+++ b/CurrentE.html
@@ -66,12 +66,13 @@
     </footer>
 
     <header id="colorbar">
+        <img src="logo_10195.png" id="logo" alt="logo of 10195">
+
         <div class="navbar">
+            <a id="titletext" href="main.html">| 10195 Night Owls</a>
             <div class="navtext">
-                <img src="logo_10195.png" id="logo" alt="logo of 10195">
-                <div class="nav" id="special"><a class="navobj" href="main.html">Home</a></div>
                 <div class="nav"><a class="navobj" href="AboutUs.html">AboutUs</a></div>
-                <div class="nav" id="currente"><a class="navobj" href="CurrentE.html">CurrentEvents</a></div>
+                <div class="nav"><a class="navobj" href="CurrentE.html">CurrentEvents</a></div>
                 <div class="nav"><a class="navobj" href="Achievements.html">Achievements</a></div>
                 <div class="nav"><a class="navobj" href="Resources.html">Resources</a></div>
                 <div class="nav"><a class="navobj" href="Sponsors.html">Sponsors</a></div>
