--- a/Resources.html
+++ b/Resources.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="Style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width-device-width, initial-scale-1">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <script src="slideshow.js" defer></script>
     <title>Current Events</title>
 </head>
@@ -17,7 +18,33 @@
     </section>
 
     <section id="resourceintro">
-        <div id="secondsection1">
+        <h1 id="resourceheading">CAD/Design Files</h1>
+        <hr>
+        <p id="resourcelink">
+           <a href= "https://a360.co/3AooCcT">Link for 2023 Drivetrain</a>
+        </p>
+        <hr>
+        <h1 id="resourceheading">Programming Sources</h1>
+        <hr>
+        <p id="resourcelink">
+            <a href= "https://a360.co/3AooCcT">Link for 2023 Drivetrain</a>
+         </p>
+        <hr>
+        <h1 id="resourceheading">Engineering Notebook and Portfolio</h1>
+        <hr>
+        <p id="resourcelink">
+            <a href= "https://a360.co/3AooCcT">Link for 2023 Drivetrain</a>
+         </p>
+        <hr>
+        <h1 id="resourceheading">Other Marketing Items</h1>
+        <hr>
+        <p id="resourcelink">
+            <a href= "https://a360.co/3AooCcT">Link for 2023 Drivetrain</a>
+         </p>
+
+    </section>
+
+            <!-- <div id="secondsection1">
 
             <div id="sidetext3">
                 <h1 class="subH1">CAD/Design files</h1>
@@ -52,9 +79,7 @@
                     <br>et dolore magna aliqua.
                 </p>
             </div>
-        </div>
-
-    </section>
+        </div> -->
 
     <footer id="aboutus">
         <h2>Follow our updates</h2>
@@ -71,14 +96,15 @@
     </footer>
 
     <header id="colorbar">
+        <img src="logo_10195.png" id="logo" alt="logo of 10195">
+
         <div class="navbar">
+            <a id="titletext" href="main.html">| 10195 Night Owls</a>
             <div class="navtext">
-                <img src="logo_10195.png" id="logo" alt="logo of 10195">
-                <div class="nav" id="special"><a class="navobj" href="main.html">Home</a></div>
                 <div class="nav"><a class="navobj" href="AboutUs.html">AboutUs</a></div>
                 <div class="nav"><a class="navobj" href="CurrentE.html">CurrentEvents</a></div>
                 <div class="nav"><a class="navobj" href="Achievements.html">Achievements</a></div>
-                <div class="nav" id="resources"><a class="navobj" href="Resources.html">Resources</a></div>
+                <div class="nav"><a class="navobj" href="Resources.html">Resources</a></div>
                 <div class="nav"><a class="navobj" href="Sponsors.html">Sponsors</a></div>
                 <div class="nav"><a class="navobj" href="ContactUs.html">ContactUs</a></div>
             </div>
