--- a/main.html
+++ b/main.html
@@ -79,9 +79,8 @@
         <img src="logo_10195.png" id="logo" alt="logo of 10195">
 
         <div class="navbar">
-            <div id="title"><a id="titletext" href="main.html">| 10195 Night Owls</a></div>
+            <a id="titletext" href="main.html">| 10195 Night Owls</a>
             <div class="navtext">
-
                 <div class="nav"><a class="navobj" href="AboutUs.html">AboutUs</a></div>
                 <div class="nav"><a class="navobj" href="CurrentE.html">CurrentEvents</a></div>
                 <div class="nav"><a class="navobj" href="Achievements.html">Achievements</a></div>
