adjusted about us page

--- a/main.html
+++ b/main.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="favicon.ico" />
+    <script src="sponsorslideshow.js" defer></script>
 
     <title>Night Owls Home</title>
 </head>
@@ -56,9 +57,64 @@
 
         </div>
         <h1 class="subH1" id="subH12">Our Sponsors</h1>
-        <h1 class="placeholder">we broke oop</h1>
-    </section>
+        <!-- Slideshow container -->
+        <div class="slideshow-container">
 
+            <!-- Full-width images with number and caption text -->
+            <div class="mySlides fade">
+                <img src="applespon.png" class="sponslideimage">
+            </div>
+
+            <div class="mySlides fade">
+                <img src="te_sponsor.png" class="sponslideimage">
+            </div>
+
+            <div class="mySlides fade">
+                <img src="qorvo-sponsor.png" class="sponslideimage">
+            </div>
+            <div class="mySlides fade">
+                <img src="P&Gsponsor.png" class="sponslideimage">
+            </div>
+
+            <div class="mySlides fade">
+                <img src="abco_sponsor.png" class="sponslideimage">
+            </div>
+            <div class="mySlides fade">
+                <img src="Kaleideum_sponsor.png" class="sponslideimage">
+            </div>
+
+            <div class="mySlides fade">
+                <img src="williams_sponsor.jpg" class="sponslideimage">
+            </div>
+            <div class="mySlides fade">
+                <img src="gtc-sponsor.png" class="sponslideimage">
+            </div>
+
+            <div class="mySlides fade">
+                <img src="ecg-ptsa-sponsor.png" class="sponslideimage">
+            </div>
+            <div class="mySlides fade">
+                <img src="ecg-robotics-parents-sponsor.png" class="sponslideimage">
+            </div>
+
+            <div class="mySlides fade">
+                <img src="Unitedway-sponsor.png" class="sponslideimage">
+            </div>
+            <div class="mySlides fade">
+                <img src="network-for-good-logo-sposnor.png" class="sponslideimage">
+            </div>
+            <div class="mySlides fade">
+                <img src="HarrisTeeter-sponsor.png" class="sponslideimage">
+            </div>
+
+
+            <!-- Next and previous buttons -->
+            <a class="sprev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="snext" onclick="plusSlides(1)">&#10095;</a>
+        </div>
+        <br>
+
+</section>
 
 
     <footer>
@@ -81,12 +137,12 @@
         <div class="navbar">
             <a id="titletext" href="main.html">| 10195 Night Owls</a>
             <div class="navtext">
-                <div class="nav"><a class="navobj" href="AboutUs.html">AboutUs</a></div>
-                <div class="nav"><a class="navobj" href="CurrentE.html">CurrentEvents</a></div>
+                <div class="nav"><a class="navobj" href="AboutUs.html">About Us</a></div>
+                <div class="nav"><a class="navobj" href="CurrentE.html">Current Events</a></div>
                 <div class="nav"><a class="navobj" href="Achievements.html">Achievements</a></div>
                 <div class="nav"><a class="navobj" href="Resources.html">Resources</a></div>
                 <div class="nav"><a class="navobj" href="Sponsors.html">Sponsors</a></div>
-                <div class="nav"><a class="navobj" href="ContactUs.html">ContactUs</a></div>
+                <div class="nav"><a class="navobj" href="ContactUs.html">Contact Us</a></div>
             </div>
         </div>
     </header>
