--- a/AboutUs.html
+++ b/AboutUs.html
@@ -10,9 +10,8 @@
 
 <body>
     <section class="sectionformat">
-        <div id="centralimg">
-
-        </div>
+        <h1 id="abouth1">About Us</h1>
+        <img id="centralimg1" src="2021photo.png">
     </section>
     <section id="aboutintro">
         <div id="secondsection0">
@@ -39,91 +38,58 @@
 
     <section id="members">
 
-        <h1 class="subH1" id="members">Our members</h1>
+        <h1 class="subH1" id="members">Meet the Team</h1>
 
         <div id="memba">
-            <div class="member"><img src="instagram.png" alt="Julian Maycock" title="Julian Maycock" width="135"
+            <div class="member"><img id="memba1" src="ajay_bio.png" alt="Ajay" title="ajay_bio" width="135"
                     height="180">
-                <h4>Julian Maycock</h4>
-                <p>Class of 2021</p>
+                <h4 id="memba">Ajay Dakoriya</h4>
+                <p id="memba">CAD/Designer</p>
             </div>
 
-            <div class="member"><img src="twitter.png" alt="Janavi Mehta" title="Janavi Mehta" width="135" height="180">
-                <h4>Janavi Mehta</h4>
-                <p>Class of 2020</p>
+            <div class="member"><img img id="memba1" src="roma_bio.png" alt="Roma" title="roma_bio" width="135" height="180">
+                <h4 id="memba">Roma Desai</h4>
+                <p id="memba">CAD/Designer</p>
             </div>
 
-            <div class="member"><img src="tiktok.png" alt="Hannah Oh" title="Hannah Oh" width="135" height="180">
-                <h4>Hannah Oh</h4>
-                <p>Class of 2021</p>
+            <div class="member"><img img id="memba1" src="veer_bio.png" alt="Veer" title="veer_bio" width="135" height="180">
+                <h4 id="memba">Veer Goparaju</h4>
+                <p id="memba">Builder</p>
             </div>
-            <div class="member"><img src="instagram.png" alt="Julian Maycock" title="Julian Maycock" width="135"
+            <div class="member"><img img id="memba1" src="mark_bio.png" alt="Mark" title="mark_bio" width="135" height="180">
+                <h4 id="memba">Mark Man</h4>
+                <p id="memba">Programmer</p>
+            </div>
+
+            <div class="member"><img img id="memba1" src="ashwin_bio.png" alt="Ashwin" title="ashwin_bio" width="135" height="180">
+                <h4 id="memba">Ashwin Marwaha</h4>
+                <p id="memba">Builder</p>
+            </div>
+
+            <div class="member"><img img id="memba1" src="cara_bio.png" alt="cara" title="cara_bio" width="135" height="180">
+                <h4 id="memba">Cara Pielow</h4>
+                <p id="memba">Marketing</p>
+            </div>
+            <div class="member"><img img id="memba1" src="trisha_bio.png" alt="Trisha" title="trisha_bio" width="135"
                     height="180">
-                <h4>Julian Maycock</h4>
-                <p>Class of 2021</p>
+                <h4 id="memba">Trisha Raj</h4>
+                <p id="memba">Outreach Coordinator</p>
             </div>
 
-            <div class="member"><img src="twitter.png" alt="Janavi Mehta" title="Janavi Mehta" width="135" height="180">
-                <h4>Janavi Mehta</h4>
-                <p>Class of 2020</p>
+            <div class="member"><img img id="memba1" src="kevail_bio.png" alt="Keval" title="kevail_bio" width="135" height="180">
+                <h4 id="memba">Keval Shah</h4>
+                <p id="memba">Captain and Programmer</p>
             </div>
 
-            <div class="member"><img src="tiktok.png" alt="Hannah Oh" title="Hannah Oh" width="135" height="180">
-                <h4>Hannah Oh</h4>
-                <p>Class of 2021</p>
-            </div>
-            <div class="member"><img src="instagram.png" alt="Julian Maycock" title="Julian Maycock" width="135"
-                    height="180">
-                <h4>Julian Maycock</h4>
-                <p>Class of 2021</p>
+            <div class="member"><img img id="memba1" src="austin_bio.png" alt="Austin" title="austin_bio" width="135" height="180">
+                <h4 id="memba">Austin Varghese</h4>
+                <p id="memba">CAD/Designer</p>
             </div>
 
-            <div class="member"><img src="twitter.png" alt="Janavi Mehta" title="Janavi Mehta" width="135" height="180">
-                <h4>Janavi Mehta</h4>
-                <p>Class of 2020</p>
-            </div>
-
-            <div class="member"><img src="tiktok.png" alt="Hannah Oh" title="Hannah Oh" width="135" height="180">
-                <h4>Hannah Oh</h4>
-                <p>Class of 2021</p>
-            </div>
-            <div class="member"><img src="instagram.png" alt="Julian Maycock" title="Julian Maycock" width="135"
-                    height="180">
-                <h4>Julian Maycock</h4>
-                <p>Class of 2021</p>
-            </div>
-
-            <div class="member"><img src="twitter.png" alt="Janavi Mehta" title="Janavi Mehta" width="135" height="180">
-                <h4>Janavi Mehta</h4>
-                <p>Class of 2020</p>
-            </div>
-
-            <div class="member"><img src="tiktok.png" alt="Hannah Oh" title="Hannah Oh" width="135" height="180">
-                <h4>Hannah Oh</h4>
-                <p>Class of 2021</p>
-            </div>
-            <div class="member"><img src="tiktok.png" alt="Hannah Oh" title="Hannah Oh" width="135" height="180">
-                <h4>Hannah Oh</h4>
-                <p>Class of 2021</p>
-            </div>
-            <div class="member"><img src="instagram.png" alt="Julian Maycock" title="Julian Maycock" width="135"
-                    height="180">
-                <h4>Julian Maycock</h4>
-                <p>Class of 2021</p>
-            </div>
-
-            <div class="member"><img src="twitter.png" alt="Janavi Mehta" title="Janavi Mehta" width="135" height="180">
-                <h4>Janavi Mehta</h4>
-                <p>Class of 2020</p>
-            </div>
-
-            <div class="member"><img src="tiktok.png" alt="Hannah Oh" title="Hannah Oh" width="135" height="180">
-                <h4>Hannah Oh</h4>
-                <p>Class of 2021</p>
-            </div>
         </div>
 
     </section>
+
 
     <footer id="aboutus">
         <h2>Follow our updates</h2>
@@ -145,12 +111,12 @@
         <div class="navbar">
             <a id="titletext" href="main.html">| 10195 Night Owls</a>
             <div class="navtext">
-                <div class="nav"><a class="navobj" href="AboutUs.html">AboutUs</a></div>
-                <div class="nav"><a class="navobj" href="CurrentE.html">CurrentEvents</a></div>
+                <div class="nav"><a class="navobj" href="AboutUs.html">About Us</a></div>
+                <div class="nav"><a class="navobj" href="CurrentE.html">Current Events</a></div>
                 <div class="nav"><a class="navobj" href="Achievements.html">Achievements</a></div>
                 <div class="nav"><a class="navobj" href="Resources.html">Resources</a></div>
                 <div class="nav"><a class="navobj" href="Sponsors.html">Sponsors</a></div>
-                <div class="nav"><a class="navobj" href="ContactUs.html">ContactUs</a></div>
+                <div class="nav"><a class="navobj" href="ContactUs.html">Contact Us</a></div>
             </div>
         </div>
     </header>
