--- a/Sponsors.html
+++ b/Sponsors.html
@@ -10,11 +10,18 @@
 </head>
 
 <body>
+    <section class="sectionformat">
+        <div id="centralimg">
 
-    <section class="sponsorsection">
-        <h1 class="subH1" id="subH12">Our Sponsors</h1>
-        <h1 class="placeholder">we broke oop</h1>
+        </div>
     </section>
+
+    <section>
+
+    </section>
+    <img src="sponsorss.png" id="bankais">
+
+
 
     <footer id="aboutus">
         <h2>Follow our updates</h2>
@@ -36,12 +43,12 @@
         <div class="navbar">
             <a id="titletext" href="main.html">| 10195 Night Owls</a>
             <div class="navtext">
-                <div class="nav"><a class="navobj" href="AboutUs.html">AboutUs</a></div>
-                <div class="nav"><a class="navobj" href="CurrentE.html">CurrentEvents</a></div>
+                <div class="nav"><a class="navobj" href="AboutUs.html">About Us</a></div>
+                <div class="nav"><a class="navobj" href="CurrentE.html">Current Events</a></div>
                 <div class="nav"><a class="navobj" href="Achievements.html">Achievements</a></div>
                 <div class="nav"><a class="navobj" href="Resources.html">Resources</a></div>
                 <div class="nav"><a class="navobj" href="Sponsors.html">Sponsors</a></div>
-                <div class="nav"><a class="navobj" href="ContactUs.html">ContactUs</a></div>
+                <div class="nav"><a class="navobj" href="ContactUs.html">Contact Us</a></div>
             </div>
         </div>
     </header>
