added content to all pages

--- a/Achievements.html
+++ b/Achievements.html
@@ -10,13 +10,75 @@
 </head>
 
 <body>
-    <section class="sectionformat">
-        <div id="centralimg">
+    <section id="sectionformat1">
 
+        <div id="centralimg1">
+            <img src="acheiveimg.png" id="centrallimg"
+                alt="picture of the night owls team during 2022 states competition">
+            <h1 id="achieveh1">Achievements</h1>
         </div>
     </section>
+
     <section id="Achievementsintro">
-        <h1 class="subH1">2021-2022 Season</h1>
+        <h1 id="achievetitle">2021-2022</h1>
+        <hr>
+        <ul id="achieve">
+            <li>Finalist Alliance Captain ~ Scrimmage</li>
+            <li>Connect Award 1st Place ~ Sanford Qualifier</li>
+            <li>Inspire Award 3rd Place ~ Remote Qualifier #4</li>
+            <li>Control Award 1st Place ~ Remote Qualifier #4</li>
+        </ul>
+        <hr>
+        <h1 id="achievetitle">2020-2021</h1>
+        <hr>
+        <ul id="achieve">
+            <li>Design Award 3rd Place ~ Remote Qualifier #2</li>
+            <li>Motivate Award 1st Place ~ Remote Qualifier #2</li>
+            <li>Inspire 3rd Place ~ Remote Qualifier #2</li>
+            <li>Promote Award ~ Remote Qualifier #4</li>
+            <li>Connect Award 2nd Place ~ Remote Qualifier #4</li>
+            <li>Design Award 2nd Place ~ Remote Qualifier #9</li>
+            <li>Motivate Award 2nd Place ~ Remote Qualifier #9</li>
+            <li>Inspire Award 1st Place ~ Remote Qualifier #9</li>
+            <li>Compass 2nd Place ~ States</li>
+        </ul>
+        <hr>
+        <h1 id="achievetitle">2019-2020</h1>
+        <hr>
+        <ul id="achieve">
+            <li>Motivate Award 2nd Place ~ Northern Qualifier</li>
+            <li>Think Award 3rd Place ~ Southern Qualifier</li>
+        </ul>
+        <hr>
+        <h1 id="achievetitle">2018-2019</h1>
+        <hr>
+        <ul id="achieve">
+            <li>Motivate Award 1st Place ~ Northern Qualifier</li>
+            <li>Fourth-Place Alliance ~ Southern Qualifier</li>
+        </ul>
+        <hr>
+        <h1 id="achievetitle">2017-2018</h1>
+        <hr>
+        <ul id="achieve">
+            <li>Control Award 1st Place ~ Asheville Qualifier </li>
+            <li>Finalist Alliance Captain ~ Asheville Qualifier</li>
+            <li>Think Award 3rd Place ~ Southern Qualifier</li>
+            <li>Inspire Award 3rd Place ~ Southern Qualifiers</li>
+        </ul>
+        <hr>
+        <h1 id="achievetitle">2016-2017</h1>
+        <hr>
+        <ul id="achieve">
+            <li>Winning Alliance ~ Southern Qualifier</li>
+            <li>Connect Award 2nd Place ~ States</li>
+        </ul>
+        <hr>
+        <h1 id="achievetitle">2015-2016</h1>
+        <hr>
+        <ul id="achieve">
+            <li>Finalist Alliance ~ Southern Qualifier</li>
+            <li>Finalist Alliance ~ States</li>
+        </ul>
     </section>
 
     <footer id="aboutus">
@@ -41,7 +103,7 @@
             <div class="navtext">
                 <div class="nav"><a class="navobj" href="AboutUs.html">About Us</a></div>
                 <div class="nav"><a class="navobj" href="CurrentE.html">Current Events</a></div>
-                <div class="nav"><a class="navobj" href="Achievements.html">Achievements</a></div>
+                <div class="nav" id="active"><a class="navobj" href="Achievements.html">Achievements</a></div>
                 <div class="nav"><a class="navobj" href="Resources.html">Resources</a></div>
                 <div class="nav"><a class="navobj" href="Sponsors.html">Sponsors</a></div>
                 <div class="nav"><a class="navobj" href="ContactUs.html">Contact Us</a></div>
