--- a/Sponsors.html
+++ b/Sponsors.html
@@ -10,17 +10,47 @@
 </head>
 
 <body>
-    <section class="sectionformat">
-        <div id="centralimg">
+    <section id="sectionformat1">
 
+        <div id="centralimg1">
+            <img src="acheiveimg.png" id="centrallimg"
+                alt="picture of the night owls team during 2022 states competition">
+            <h1 id="achieveh1">   Sponsors</h1>
         </div>
     </section>
 
-    <section>
-
+    <section class="sponsorssection">
+        <h1 id="sponsorheading">Diamond Sponsors</h1>
+        <hr>
+            <img src="applespon.png" id="sponsorimg">
+        <hr>
+        <h1 id="sponsorheading">Platinum Sponsors</h1>
+        <hr>
+        <img src="te_sponsor.png" id="sponsorimg" width="200" height="150">
+        <img src="qorvo-sponsor.png" id="sponsorimg1" width="200" height="200">
+        <img src="P&Gsponsor.png" id="sponsorimg" width="200" height="200">
+        <hr>
+        <h1 id="sponsorheading">Gold Sponsors</h1>
+        <hr>
+        <img src="abco_sponsor.png" id="sponsorimg" width="200" height="150">
+        <img src="Kaleideum_sponsor.png" id="sponsorimg1" width="200" height="150">
+        <img src="williams_sponsor.jpg" id="sponsorimg" width="200" height="150">
+        <hr>
+        <h1 id="sponsorheading">Silver Sponsors</h1>
+        <hr>
+        <img src="gtc-sponsor.png" id="sponsorimg" width="200" height="130">
+        <img src="ecg-ptsa-sponsor.png" id="sponsorimg1" width="200" height="120">
+         <hr>
+         <h1 id="sponsorheading">Bronze Sponsors</h1>
+         <hr>
+         <img src="ecg-robotics-parents-sponsor.png" id="sponsorimg3" width="300" height="200">
+         <hr>
+         <h1 id="sponsorheading">Honorable Mentions</h1>
+         <hr>
+         <img src="Unitedway-sponsor.png" id="sponsorimg" width="200" height="100">
+         <img src="network-for-good-logo-sposnor.png" id="sponsorimg1" width="250" height="100">
+         <img src="HarrisTeeter-sponsor.png" id="sponsorimg" width="300" height="200">
     </section>
-    <img src="sponsorss.png" id="bankais">
-
 
 
     <footer id="aboutus">
@@ -47,7 +77,7 @@
                 <div class="nav"><a class="navobj" href="CurrentE.html">Current Events</a></div>
                 <div class="nav"><a class="navobj" href="Achievements.html">Achievements</a></div>
                 <div class="nav"><a class="navobj" href="Resources.html">Resources</a></div>
-                <div class="nav"><a class="navobj" href="Sponsors.html">Sponsors</a></div>
+                <div class="nav" id="active"><a class="navobj" href="Sponsors.html">Sponsors</a></div>
                 <div class="nav"><a class="navobj" href="ContactUs.html">Contact Us</a></div>
             </div>
         </div>
