--- a/ContactUs.html
+++ b/ContactUs.html
@@ -59,7 +59,7 @@
                 <div class="nav"><a class="navobj" href="Achievements.html">Achievements</a></div>
                 <div class="nav"><a class="navobj" href="Resources.html">Resources</a></div>
                 <div class="nav"><a class="navobj" href="Sponsors.html">Sponsors</a></div>
-                <div class="nav"><a class="navobj" href="ContactUs.html">Contact Us</a></div>
+                <div class="nav" id="active"><a class="navobj" href="ContactUs.html">Contact Us</a></div>
             </div>
         </div>
     </header>
