fixed header pages

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -10,8 +10,10 @@
 
 <body>
     <section class="sectionformat">
-        <h1 id="abouth1">About Us</h1>
-        <img id="centralimg1" src="2021photo.png">
+        <div id="aboutimage">
+            <h1 id="abouth1">About Us</h1>
+            <img id="centralimg1" src="2021photo.png">
+        </div>
     </section>
     <section id="aboutintro">
         <div id="secondsection0">
@@ -28,7 +30,8 @@
                     aliquip ex ea.</p>
             </div>
             <div id="smolimgplace1">
-                <img src="roboworkimg.png" id="smolimg1" alt="picture of the night owls team working on robot">
+                <img src="roboabout.png" id="smolimg1" alt="picture of the night owls team working on robot" width="400"
+                    height="400">
             </div>
         </div>
     </section>
@@ -47,26 +50,31 @@
                 <p id="memba">CAD/Designer</p>
             </div>
 
-            <div class="member"><img img id="memba1" src="roma_bio.png" alt="Roma" title="roma_bio" width="135" height="180">
+            <div class="member"><img img id="memba1" src="roma_bio.png" alt="Roma" title="roma_bio" width="135"
+                    height="180">
                 <h4 id="memba">Roma Desai</h4>
                 <p id="memba">CAD/Designer</p>
             </div>
 
-            <div class="member"><img img id="memba1" src="veer_bio.png" alt="Veer" title="veer_bio" width="135" height="180">
+            <div class="member"><img img id="memba1" src="veer_bio.png" alt="Veer" title="veer_bio" width="135"
+                    height="180">
                 <h4 id="memba">Veer Goparaju</h4>
                 <p id="memba">Builder</p>
             </div>
-            <div class="member"><img img id="memba1" src="mark_bio.png" alt="Mark" title="mark_bio" width="135" height="180">
+            <div class="member"><img img id="memba1" src="mark_bio.png" alt="Mark" title="mark_bio" width="135"
+                    height="180">
                 <h4 id="memba">Mark Man</h4>
                 <p id="memba">Programmer</p>
             </div>
 
-            <div class="member"><img img id="memba1" src="ashwin_bio.png" alt="Ashwin" title="ashwin_bio" width="135" height="180">
+            <div class="member"><img img id="memba1" src="ashwin_bio.png" alt="Ashwin" title="ashwin_bio" width="135"
+                    height="180">
                 <h4 id="memba">Ashwin Marwaha</h4>
                 <p id="memba">Builder</p>
             </div>
 
-            <div class="member"><img img id="memba1" src="cara_bio.png" alt="cara" title="cara_bio" width="135" height="180">
+            <div class="member"><img img id="memba1" src="cara_bio.png" alt="cara" title="cara_bio" width="135"
+                    height="180">
                 <h4 id="memba">Cara Pielow</h4>
                 <p id="memba">Marketing</p>
             </div>
@@ -76,12 +84,14 @@
                 <p id="memba">Outreach Coordinator</p>
             </div>
 
-            <div class="member"><img img id="memba1" src="kevail_bio.png" alt="Keval" title="kevail_bio" width="135" height="180">
+            <div class="member"><img img id="memba1" src="kevail_bio.png" alt="Keval" title="kevail_bio" width="135"
+                    height="180">
                 <h4 id="memba">Keval Shah</h4>
                 <p id="memba">Captain and Programmer</p>
             </div>
 
-            <div class="member"><img img id="memba1" src="austin_bio.png" alt="Austin" title="austin_bio" width="135" height="180">
+            <div class="member"><img img id="memba1" src="austin_bio.png" alt="Austin" title="austin_bio" width="135"
+                    height="180">
                 <h4 id="memba">Austin Varghese</h4>
                 <p id="memba">CAD/Designer</p>
             </div>
