--- a/ContactUs.html
+++ b/ContactUs.html
@@ -10,9 +10,12 @@
 </head>
 
 <body>
-    <section class="sectionformat">
-        <div id="centralimg">
+    <section id="sectionformat1">
 
+        <div id="centralimg1">
+            <img src="ecgrlocat.png" id="centrallimg"
+                alt="picture of ecgr building">
+            <h1 id="achieveh1">Contact Us</h1>
         </div>
     </section>
     <section id="contactusintro">
