--- a/CurrentE.html
+++ b/CurrentE.html
@@ -10,9 +10,12 @@
 </head>
 
 <body>
-    <section class="sectionformat">
-        <div id="centralimg">
+    <section id="sectionformat1">
 
+        <div id="centralimg1">
+            <img src="owlreach.png" id="centrallimg"
+                alt="picture of the night owls team during 2022 states competition">
+            <h1 id="achieveh112">Current Events</h1>
         </div>
     </section>
     <section id="CurrentEintro">
