--- a/Sponsors.html
+++ b/Sponsors.html
@@ -13,9 +13,9 @@
     <section id="sectionformat1">
 
         <div id="centralimg1">
-            <img src="acheiveimg.png" id="centrallimg"
+            <img src="sponsorheader.png" id="centrallimg"
                 alt="picture of the night owls team during 2022 states competition">
-            <h1 id="achieveh1">   Sponsors</h1>
+            <h1 id="achieveh11">Sponsors</h1>
         </div>
     </section>
 
