--- a/Resources.html
+++ b/Resources.html
@@ -11,9 +11,12 @@
 </head>
 
 <body>
-    <section class="sectionformat">
-        <div id="centralimg">
+    <section id="sectionformat1">
 
+        <div id="centralimg1">
+            <img src="roborend.png" id="centrallimg"
+                alt="picture of the night owls team during 2022 states competition">
+            <h1 id="achieveh11">Resources</h1>
         </div>
     </section>
 
