--- a/AboutUs.html
+++ b/AboutUs.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="Style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About Us</title>
+    <title>About Us - Night Owls</title>
 </head>
 
 <body>
