--- a/ContactUs.html
+++ b/ContactUs.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width-device-width, initial-scale-1">
     <script src="slideshow.js" defer></script>
-    <title>Current Events</title>
+    <title>Contact Us - Night Owls</title>
 </head>
 
 <body>
