--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="favicon.ico" />
     <script src="sponsorslideshow.js" defer></script>
 
-    <title>Night Owls Home</title>
+    <title>Nest - Night Owls</title>
 </head>
 
 <body>
