--- a/AboutUs.html
+++ b/AboutUs.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="Style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="favicon.ico" />
     <title>About Us - Night Owls</title>
 </head>
 
