--- a/Resources.html
+++ b/Resources.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width-device-width, initial-scale-1">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <script src="slideshow.js" defer></script>
+    <link rel="icon" href="favicon.ico" />
     <title>Resources - Night Owls</title>
 </head>
 
