made majority of the website lapotp friendly

--- a/ContactUs.html
+++ b/ContactUs.html
@@ -16,12 +16,12 @@
         <div id="centralimg1">
             <img src="ecgrlocat.png" id="centrallimg"
                 alt="picture of ecgr building">
-            <h1 id="achieveh1">Contact Us</h1>
+            <h1 id="achieveh114">Contact Us</h1>
         </div>
     </section>
     <section id="contactusintro">
         <div id="form">
-            <h1 class="subH1">Want to contact us?</h1>
+            <h1 class="subH1" id="black">Want to contact us?</h1>
             <iframe id="contactform"
                 src="https://docs.google.com/forms/d/e/1FAIpQLSeZ4oLuUQBc55-tBGVFw6kXd_OjlA8Siq8R1rdKjKt2n5NNug/viewform?edit2=2_ABaOnud6KO1A2MEY34VjCdQDxMi2OXq8B2E9Jde3p6F4"
                 width="550" height="600" frameborder="0">
