--- a/Sponsors.html
+++ b/Sponsors.html
@@ -16,41 +16,41 @@
         <div id="centralimg1">
             <img src="sponsorheader.png" id="centrallimg"
                 alt="picture of the night owls team during 2022 states competition">
-            <h1 id="achieveh11">Sponsors</h1>
+            <h1 id="achieveh113">Sponsors</h1>
         </div>
     </section>
 
     <section class="sponsorssection">
         <h1 id="sponsorheading">Diamond Sponsors</h1>
         <hr>
-            <img src="applespon.png" id="sponsorimg">
+            <img src="applespon.png" id="apple">
         <hr>
         <h1 id="sponsorheading">Platinum Sponsors</h1>
         <hr>
-        <img src="te_sponsor.png" id="sponsorimg" width="200" height="150">
-        <img src="qorvo-sponsor.png" id="sponsorimg1" width="200" height="200">
-        <img src="P&Gsponsor.png" id="sponsorimg" width="200" height="200">
+        <img src="te_sponsor.png" id="te">
+        <img src="qorvo-sponsor.png" id="qorvo">
+        <img src="P&Gsponsor.png" id="PG">
         <hr>
         <h1 id="sponsorheading">Gold Sponsors</h1>
         <hr>
-        <img src="abco_sponsor.png" id="sponsorimg" width="200" height="150">
-        <img src="Kaleideum_sponsor.png" id="sponsorimg1" width="200" height="150">
-        <img src="williams_sponsor.jpg" id="sponsorimg" width="200" height="150">
+        <img src="abco_sponsor.png" id="abco">
+        <img src="Kaleideum_sponsor.png" id="kali">
+        <img src="williams_sponsor.jpg" id="will">
         <hr>
         <h1 id="sponsorheading">Silver Sponsors</h1>
         <hr>
-        <img src="gtc-sponsor.png" id="sponsorimg" width="200" height="130">
-        <img src="ecg-ptsa-sponsor.png" id="sponsorimg1" width="200" height="120">
+        <img src="gtc-sponsor.png" id="gtc">
+        <img src="ecg-ptsa-sponsor.png" id="ptsa">
          <hr>
          <h1 id="sponsorheading">Bronze Sponsors</h1>
          <hr>
-         <img src="ecg-robotics-parents-sponsor.png" id="sponsorimg3" width="300" height="200">
+         <img src="ecg-robotics-parents-sponsor.png" id="parents">
          <hr>
          <h1 id="sponsorheading">Honorable Mentions</h1>
          <hr>
-         <img src="Unitedway-sponsor.png" id="sponsorimg" width="200" height="100">
-         <img src="network-for-good-logo-sposnor.png" id="sponsorimg1" width="250" height="100">
-         <img src="HarrisTeeter-sponsor.png" id="sponsorimg" width="300" height="200">
+         <img src="Unitedway-sponsor.png" id="united">
+         <img src="network-for-good-logo-sposnor.png" id="network">
+         <img src="HarrisTeeter-sponsor.png" id="HT">
     </section>
 
 
