added all mobile potriat responsive design

--- a/Achievements.html
+++ b/Achievements.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" href="Style.css">
     <meta charset="utf-8">
-    <meta name="viewport" content="width-device-width, initial-scale-1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="slideshow.js" defer></script>
     <link rel="icon" href="favicon.ico" />
     <title>Achievements - Night Owls</title>
@@ -100,11 +100,11 @@
         <img src="logo_10195.png" id="logo" alt="logo of 10195">
 
         <div class="navbar">
-            <a id="titletext" href="main.html">| 10195 Night Owls</a>
+            <a id="titletext" href="main.html">10195 Night Owls</a>
             <div class="navtext">
                 <div class="nav"><a class="navobj" href="AboutUs.html">About Us</a></div>
                 <div class="nav"><a class="navobj" href="CurrentE.html">Current Events</a></div>
-                <div class="nav" id="active"><a class="navobj" href="Achievements.html">Achievements</a></div>
+                <div class="nav"><a class="navobj" href="Achievements.html">Achievements</a></div>
                 <div class="nav"><a class="navobj" href="Resources.html">Resources</a></div>
                 <div class="nav"><a class="navobj" href="Sponsors.html">Sponsors</a></div>
                 <div class="nav"><a class="navobj" href="ContactUs.html">Contact Us</a></div>
