--- a/Sponsors.html
+++ b/Sponsors.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" href="Style.css">
     <meta charset="utf-8">
-    <meta name="viewport" content="width-device-width, initial-scale-1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="slideshow.js" defer></script>
     <link rel="icon" href="favicon.ico" />
     <title>Sponsors - Night Owls</title>
