--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="favicon.ico" />
     <script src="sponsorslideshow.js" defer></script>
 
-    <title>Nest - Night Owls</title>
+    <title>Night Owls Home</title>
 </head>
 
 <body>
@@ -58,35 +58,63 @@
         </div>
         <h1 class="subH1" id="subH12">Our Sponsors</h1>
         <!-- Slideshow container -->
-        <div class="sliideshow-container">
+        <div class="slideshow-container">
 
-            <!-- Full-width images with number-->
-
-            <div class="mySlides1 fade" >
-                <div class="leftcontain"><img src="abco_sponsor.png" class="sponleftslideimage"></div>
-                <div class="rightcontain"><img src="Kaleideum_sponsor.png" class="sponrightslideimage"></div>
-            </div>
-            <div class="mySlides1 fade">
-                <div class="leftcontain"><img src="applespon.png" class="sponleftslideimage" width="150px" height="250px"></div>
-                <div class="rightcontain"><img src="te_sponsor.png" class="sponrightslideimage" width="150px" height="250px"></div>
+            <!-- Full-width images with number and caption text -->
+            <div class="mySlides fade">
+                <img src="applespon.png" class="sponslideimage">
             </div>
 
-            <div class="mySlides1 fade">
-                <div class="leftcontain"><img src="qorvo-sponsor.png" class="sponleftslideimage" width="150px" height="250px"></div>
-                <div class="rightcontain"><img src="P&Gsponsor.png" class="sponrightslideimage" width="150px" height="250px"></div>
+            <div class="mySlides fade">
+                <img src="te_sponsor.png" class="sponslideimage">
+            </div>
+
+            <div class="mySlides fade">
+                <img src="qorvo-sponsor.png" class="sponslideimage">
+            </div>
+            <div class="mySlides fade">
+                <img src="P&Gsponsor.png" class="sponslideimage">
+            </div>
+
+            <div class="mySlides fade">
+                <img src="abco_sponsor.png" class="sponslideimage">
+            </div>
+            <div class="mySlides fade">
+                <img src="Kaleideum_sponsor.png" class="sponslideimage">
+            </div>
+
+            <div class="mySlides fade">
+                <img src="williams_sponsor.jpg" class="sponslideimage">
+            </div>
+            <div class="mySlides fade">
+                <img src="gtc-sponsor.png" class="sponslideimage">
+            </div>
+
+            <div class="mySlides fade">
+                <img src="ecg-ptsa-sponsor.png" class="sponslideimage">
+            </div>
+            <div class="mySlides fade">
+                <img src="ecg-robotics-parents-sponsor.png" class="sponslideimage">
+            </div>
+
+            <div class="mySlides fade">
+                <img src="Unitedway-sponsor.png" class="sponslideimage">
+            </div>
+            <div class="mySlides fade">
+                <img src="network-for-good-logo-sposnor.png" class="sponslideimage">
+            </div>
+            <div class="mySlides fade">
+                <img src="HarrisTeeter-sponsor.png" class="sponslideimage">
             </div>
 
 
-
-            <div class="mySlides1 fade">
-                <div class="leftcontain"><img src="williams_sponsor.jpg" class="sponleftslideimage" width="200px" height="150px"></div>
-                <div class="rightcontain"><img src="gtc-sponsor.png" class="sponrightslideimage" width="100px" height="150px"></div>
-            </div>
-
+            <!-- Next and previous buttons -->
+            <a class="sprev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="snext" onclick="plusSlides(1)">&#10095;</a>
         </div>
         <br>
 
-    </section>
+</section>
 
 
     <footer>
