--- a/ContactUs.html
+++ b/ContactUs.html
@@ -4,14 +4,14 @@
 <head>
     <link rel="stylesheet" href="Style.css">
     <meta charset="utf-8">
-    <meta name="viewport" content="width-device-width, initial-scale-1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="slideshow.js" defer></script>
     <link rel="icon" href="favicon.ico" />
     <title>Contact Us - Night Owls</title>
 </head>
 
 <body>
-    <section id="sectionformat1">
+    <section id="sectionformat11">
 
         <div id="centralimg1">
             <img src="ecgrlocat.png" id="centrallimg"
@@ -24,7 +24,7 @@
             <h1 class="subH1" id="black">Want to contact us?</h1>
             <iframe id="contactform"
                 src="https://docs.google.com/forms/d/e/1FAIpQLSeZ4oLuUQBc55-tBGVFw6kXd_OjlA8Siq8R1rdKjKt2n5NNug/viewform?edit2=2_ABaOnud6KO1A2MEY34VjCdQDxMi2OXq8B2E9Jde3p6F4"
-                width="550" height="600" frameborder="0">
+                width="250" height="300" frameborder="0">
 
             </iframe>
         </div>
@@ -32,7 +32,7 @@
             <h1 class="subH1" id="black">Where to find us</h1>
             <iframe id="maps"
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3225.1884276996993!2d-79.90887668473064!3d36.06450788010662!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88531b3ab5f4d70d%3A0x21cf471aea97a6fe!2sECG%20Robotics!5e0!3m2!1sen!2sus!4v1662060640725!5m2!1sen!2sus"
-                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                width="300" height="225" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
