--- a/CurrentE.html
+++ b/CurrentE.html
@@ -72,10 +72,10 @@
         <img src="logo_10195.png" id="logo" alt="logo of 10195">
 
         <div class="navbar">
-            <a id="titletext" href="main.html">| 10195 Night Owls</a>
+            <a id="titletext" href="main.html">10195 Night Owls</a>
             <div class="navtext">
                 <div class="nav"><a class="navobj" href="AboutUs.html">About Us</a></div>
-                <div class="nav" id="active"><a class="navobj" href="CurrentE.html">Current Events</a></div>
+                <div class="nav"><a class="navobj" href="CurrentE.html">Current Events</a></div>
                 <div class="nav"><a class="navobj" href="Achievements.html">Achievements</a></div>
                 <div class="nav"><a class="navobj" href="Resources.html">Resources</a></div>
                 <div class="nav"><a class="navobj" href="Sponsors.html">Sponsors</a></div>
