--- a/Resources.html
+++ b/Resources.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" href="Style.css">
     <meta charset="utf-8">
-    <meta name="viewport" content="width-device-width, initial-scale-1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <script src="slideshow.js" defer></script>
     <link rel="icon" href="favicon.ico" />
@@ -17,7 +17,7 @@
         <div id="centralimg1">
             <img src="roborend.png" id="centrallimg"
                 alt="picture of the night owls team during 2022 states competition">
-            <h1 id="achieveh11">Resources</h1>
+            <h1 id="achieveh1">Resources</h1>
         </div>
     </section>
 
@@ -107,12 +107,12 @@
         <img src="logo_10195.png" id="logo" alt="logo of 10195">
 
         <div class="navbar">
-            <a id="titletext" href="main.html">| 10195 Night Owls</a>
+            <a id="titletext" href="main.html">10195 Night Owls</a>
             <div class="navtext">
                 <div class="nav"><a class="navobj" href="AboutUs.html">About Us</a></div>
                 <div class="nav"><a class="navobj" href="CurrentE.html">Current Events</a></div>
                 <div class="nav"><a class="navobj" href="Achievements.html">Achievements</a></div>
-                <div class="nav" id="active"><a class="navobj" href="Resources.html">Resources</a></div>
+                <div class="nav"><a class="navobj" href="Resources.html">Resources</a></div>
                 <div class="nav"><a class="navobj" href="Sponsors.html">Sponsors</a></div>
                 <div class="nav"><a class="navobj" href="ContactUs.html">Contact Us</a></div>
             </div>
