changed for high res screen

--- a/main.html
+++ b/main.html
@@ -38,12 +38,11 @@
             </div>
             <div id="sidetext">
                 <h1 class="subH1">Hoot we are</h1>
-                <p class="text"><span id="indent">Lorem ipsum dolor sit amet,</span> consectetur adipisicing elit, sed
-                    do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                    culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p class="text"><span id="indent">Team 10195, the Night Owls,</span> was formed in 2015 and is currently in
+                        their 6th year as part of ECG Robotics, a non-profit organization. In the past year, with new
+                        members, we have gained experience in building, programming, CAD designing, marketing and
+                        outreach. However, we are always ready to expand our expertise in these fields, learning and
+                        growing together as a team. </p>
 
                 <p id="aboutbutton"><a id="learnlink" href="AboutUs.html">Learn more</a></p>
             </div>
@@ -114,7 +113,7 @@
         </div>
         <br>
 
-</section>
+    </section>
 
 
     <footer>
