--- a/main.html
+++ b/main.html
@@ -136,7 +136,7 @@
         <div class="navbar">
             <a id="titletext" href="main.html">10195 Night Owls</a>
             <div class="navtext">
-                <div class="nav"><a class="navobj" href="AboutUs.html">About Us</a></div>
+                <div class="nav"><a class="navobj" href="AboutUs.html">bankak Us</a></div>
                 <div class="nav"><a class="navobj" href="CurrentE.html">Current Events</a></div>
                 <div class="nav"><a class="navobj" href="Achievements.html">Achievements</a></div>
                 <div class="nav"><a class="navobj" href="Resources.html">Resources</a></div>
