--- a/Achievements.html
+++ b/Achievements.html
@@ -94,6 +94,9 @@
                     href="https://www.youtube.com/channel/UC_onYFtGVh7VkBqVpQ_IPWQ">@FTC Night Owls</a>
             </div>
         </div>
+        <div id="footerinfo">
+            <p>Rights by Austin Varghese | last updated: 9/7/2022</p>
+        </div>
     </footer>
 
     <header id="colorbar">
