--- a/Sponsors.html
+++ b/Sponsors.html
@@ -65,6 +65,10 @@
             <div class="foot"><img id="logos" src="tiktok.png"><a class="footobj"
                     href="https://www.youtube.com/channel/UC_onYFtGVh7VkBqVpQ_IPWQ">@FTC Night Owls</a>
             </div>
+            
+        </div>
+        <div id="footerinfo">
+            <p>Rights by Austin Varghese | last updated: 9/7/2022</p>
         </div>
     </footer>
 
