--- a/ContactUs.html
+++ b/ContactUs.html
@@ -14,8 +14,7 @@
     <section id="sectionformat11">
 
         <div id="centralimg1">
-            <img src="ecgrlocat.png" id="centrallimg"
-                alt="picture of ecgr building">
+            <img src="ecgrlocat.png" id="centrallimg" alt="picture of ecgr building">
             <h1 id="achieveh114">Contact Us</h1>
         </div>
     </section>
@@ -23,8 +22,8 @@
         <div id="form">
             <h1 class="subH1" id="black">Want to contact us?</h1>
             <iframe id="contactform"
-                src="https://docs.google.com/forms/d/e/1FAIpQLSeZ4oLuUQBc55-tBGVFw6kXd_OjlA8Siq8R1rdKjKt2n5NNug/viewform?edit2=2_ABaOnud6KO1A2MEY34VjCdQDxMi2OXq8B2E9Jde3p6F4"
-                width="250" height="300" frameborder="0">
+                src="https://docs.google.com/forms/d/e/1FAIpQLScDg2jCGGDZFwGYtlfcaHQ--5iT91bok03TuS6XT97n60jQKA/viewform?embedded=true"
+                frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
             </iframe>
         </div>
@@ -32,7 +31,7 @@
             <h1 class="subH1" id="black">Where to find us</h1>
             <iframe id="maps"
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3225.1884276996993!2d-79.90887668473064!3d36.06450788010662!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88531b3ab5f4d70d%3A0x21cf471aea97a6fe!2sECG%20Robotics!5e0!3m2!1sen!2sus!4v1662060640725!5m2!1sen!2sus"
-                width="300" height="225" style="border:0;" allowfullscreen="" loading="lazy"
+                style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
@@ -49,9 +48,12 @@
             <div class="foot"><img id="logos" src="tiktok.png"><a class="footobj"
                     href="https://www.youtube.com/channel/UC_onYFtGVh7VkBqVpQ_IPWQ">@FTC Night Owls</a>
             </div>
+
+        </div>
+        <div id="footerinfo">
+            <p>Rights by Austin Varghese | last updated: 9/7/2022</p>
         </div>
     </footer>
-
     <header id="colorbar">
         <img src="logo_10195.png" id="logo" alt="logo of 10195">
 
