final updates and changes for final project

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -21,14 +21,16 @@
 
             <div id="sidetext0">
                 <h1 class="subH1">Hoot we are</h1>
-                <p class="text1"><span id="indent">Lorem ipsum dolor sit amet,</span> consectetur adipisicing elit, sed
-                    do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                    llit anim id est laborum. et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco laboris nisi ut
-                    aliquip ex ea.</p>
+                <p class="text1"><span id="indent">Team 10195, the Night Owls,</span> was formed in 2015 and is
+                    currently in their 6th year as part of ECG Robotics, a non-profit organization. In the past year,
+                    with new members, we have gained experience in building, programming, CAD designing, marketing and
+                    outreach. However, we are always ready to expand our expertise in these fields, learning and growing
+                    together as a team.
+                    Our team consists of one senior member, five juniors, one sophomore, and two freshmen from both the
+                    schools across Guilford County. Through our outreach events and competitions, we have learned from
+                    our mistakes and bonded as a team. We look forward to working hard this season, hopefully making it
+                    to States and Worlds this year. ECG Robotics consists of four FTC teams and one FRC team:
+                </p>
             </div>
             <div id="smolimgplace1">
                 <img src="roboabout.png" id="smolimg1" alt="picture of the night owls team working on robot" width="400"
@@ -125,7 +127,7 @@
         <div class="navbar">
             <a id="titletext" href="main.html">10195 Night Owls</a>
             <div class="navtext">
-                <div class="nav"><a class="navobj" href="AboutUs.html">About Us</a></div>
+                <div class="nav" id="active"><a class="navobj" href="AboutUs.html">About Us</a></div>
                 <div class="nav"><a class="navobj" href="CurrentE.html">Current Events</a></div>
                 <div class="nav"><a class="navobj" href="Achievements.html">Achievements</a></div>
                 <div class="nav"><a class="navobj" href="Resources.html">Resources</a></div>
