--- a/Achievements.html
+++ b/Achievements.html
@@ -107,7 +107,7 @@
             <div class="navtext">
                 <div class="nav"><a class="navobj" href="AboutUs.html">About Us</a></div>
                 <div class="nav"><a class="navobj" href="CurrentE.html">Current Events</a></div>
-                <div class="nav"><a class="navobj" href="Achievements.html">Achievements</a></div>
+                <div class="nav" id="active"><a class="navobj" href="Achievements.html">Achievements</a></div>
                 <div class="nav"><a class="navobj" href="Resources.html">Resources</a></div>
                 <div class="nav"><a class="navobj" href="Sponsors.html">Sponsors</a></div>
                 <div class="nav"><a class="navobj" href="ContactUs.html">Contact Us</a></div>
