--- a/CurrentE.html
+++ b/CurrentE.html
@@ -26,18 +26,18 @@
 
             <!-- Full-width images with number and caption text -->
             <div class="mySlides fade">
-                <img src="robomain.png" class="slideimage">
-                <div class="text">Caption Text</div>
+                <img src="robo1.jpg" class="slideimage">
+                <div class="text">Getting the Programmers ready for the season!</div>
             </div>
 
             <div class="mySlides fade">
-                <img src="roboworkimg.png" class="slideimage">
-                <div class="text">Caption Two</div>
+                <img src="robo2.jpg" class="slideimage">
+                <div class="text">New members deconstructing old robots</div>
             </div>
 
             <div class="mySlides fade">
-                <img src="robomain.png" class="slideimage">
-                <div class="text">Caption Three</div>
+                <img src="robo3.jpg" class="slideimage">
+                <div class="text">Team meetings with their new members!</div>
             </div>
 
             <!-- Next and previous buttons -->
@@ -78,7 +78,7 @@
             <a id="titletext" href="main.html">10195 Night Owls</a>
             <div class="navtext">
                 <div class="nav"><a class="navobj" href="AboutUs.html">About Us</a></div>
-                <div class="nav"><a class="navobj" href="CurrentE.html">Current Events</a></div>
+                <div class="nav" id="active"><a class="navobj" href="CurrentE.html">Current Events</a></div>
                 <div class="nav"><a class="navobj" href="Achievements.html">Achievements</a></div>
                 <div class="nav"><a class="navobj" href="Resources.html">Resources</a></div>
                 <div class="nav"><a class="navobj" href="Sponsors.html">Sponsors</a></div>
