--- a/Sponsors.html
+++ b/Sponsors.html
@@ -76,7 +76,7 @@
         <img src="logo_10195.png" id="logo" alt="logo of 10195">
 
         <div class="navbar">
-            <a id="titletext" href="main.html">| 10195 Night Owls</a>
+            <a id="titletext" href="main.html">10195 Night Owls</a>
             <div class="navtext">
                 <div class="nav"><a class="navobj" href="AboutUs.html">About Us</a></div>
                 <div class="nav"><a class="navobj" href="CurrentE.html">Current Events</a></div>
