--- a/CurrentE.html
+++ b/CurrentE.html
@@ -67,7 +67,7 @@
             </div>
         </div>
         <div id="footerinfo">
-            <p>Rights by Austin Varghese | last updated: 9/7/2022</p>
+            <p>Rights by Austin Varghese | Last updated: 9/7/2022</p>
         </div>
     </footer>
 
